# prescriptive_6

ass_3/: final_df_GA.csv  final_df_GA_0005.csv  final_df_GA_p20.csv  play.ipynb  play2.ipynb  pyproject.toml
ass_3/ass_3/: GA- Kyra Jongman.py  genetic_algorithm.ipynb  main.py  predicition.ipynb
ass_3/ass_3/algorithm/: __init__.py
ass_3/ass_3/chromosome/: __init__.py
ass_3/ass_3/constraints/: __init__.py
ass_3/ass_3/cross_over/: __init__.py
ass_3/ass_3/data/: Predictions.csv  RUL.csv  engines_for_maintenance.csv
ass_3/ass_3/day/: __init__.py
ass_3/ass_3/engine/: __init__.py
ass_3/ass_3/gene/: __init__.py
ass_3/ass_3/initialization/: __init__.py
ass_3/ass_3/maintenance/: __init__.py
ass_3/ass_3/mutation/: __init__.py
ass_3/ass_3/penalty/: __init__.py
ass_3/ass_3/selection/: __init__.py
ass_3/ass_3/team/: __init__.py
ass_3/ass_3/termination/: __init__.py
ass_3/ass_3/utils/: __init__.py
